--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8090
 spring.datasource.url=jdbc:h2:mem:book-db
 spring.h2.console.enabled=true
 spring.graphql.graphiql.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+
